about-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: about
  namespace: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: about
  template:
    metadata:
      labels:
        app: about
    spec:
      containers:
        - name: about
          image: about-service
          imagePullPolicy: Never
          ports:
            - containerPort: 3002

          readinessProbe:
            httpGet:
              path: /
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: about-service
  namespace: myproject
spec:
  selector:
    app: about
  ports:
    - port: 3002
      targetPort: 3002
