profiles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles
  namespace: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: profiles-service
          imagePullPolicy: Never
          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: profiles-service
  namespace: myproject
spec:
  selector:
    app: profiles
  ports:
    - port: 3001
      targetPort: 3001
