ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: myproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: profiles-service
                port:
                  number: 3001

          - path: /about
            pathType: Prefix
            backend:
              service:
                name: about-service
                port:
                  number: 3002
